Wed Oct 13 12:07:24 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Do not run the CIF test when DAnCE isn't build

Wed Oct 13 06:42:36 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * NEWS:
          Mentioned the fact that a new option has been added to the
          TAO IDL compiler.

Sun Oct 10 08:06:38 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst:
        Disable tests in case of CCM_NOEVENT.

Sat Oct  9 15:59:23 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Navigation/client.cpp:
          Fuzz.

Fri Oct  8 14:42:38 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * tests/CIF/Navigation/client.cpp:
        * tests/CIF/Receptacle/client.cpp:
        Change test for no_event feature.
        * examples/DevGuideExamples/Messenger/Administrator_Client_IDL2.mpc:
        * examples/DevGuideExamples/Messenger/Administrator_Client_IDL3.mpc:
        Add avoids_ccm_noevent.

Fri Oct  8 14:01:07 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Handlers/Connection_Handler.cpp:
          Some small fixes for disconnect

Fri Oct  8 13:53:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Session/Session_Container.cpp:
          Simplified disconnect_local_facet logic

Fri Oct  8 11:45:26 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Deployment/Interceptors/Deployment_Interceptors.h:
        * ciao/Deployment/Interceptors/Deployment_Interceptors.cpp:
          Layout changes

Fri Oct  8 10:00:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.h:
        * connectors/dds4ccm/examples/Hello/Sender/Hello_Sender_exec.cpp:
          Regenerated these executors and readded their original implementation

        * ciao/Containers/Session/Session_Container.cpp: